package com.project.ssaapplication.validations;

import com.project.ssaapplication.models.Investment;

public interface InvestmentValidation {
    public boolean validateInvestment(Investment investment);
}
